--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/lodash": "^4.14.178",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^17.0.11",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
