--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-media-query-hoc": "^2.1.1"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
