--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-media-query-hoc": "^2.1.1"
+    "react-media-query-hoc": "^2.1.1",
+    "td-storage": "1.1.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
